# AI-Code-Review-Agent

./: .env.example  .gitignore  CODE_REVIEW_TEST_ANALYSIS.md  Dockerfile  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LIVE_TESTING_FINAL_REPORT.md  LIVE_TESTING_SESSION.md  QUICK_REFERENCE.md  README.md  STREAMLIT_TEST_RESULTS.md  SYSTEM_STATUS_OVERVIEW.md  TESTING_COMPLETE.md  TEST_RESULTS.md  docker-compose.yml  init_db.sql  pyproject.toml  start_all.bat  stop_all.bat
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/endpoints/: health.py  reviews.py  webhooks.py
backend/app/core/: config.py  container.py  exception_handlers.py  request_id_middleware.py  telemetry.py
backend/app/db/: init_db.py  repository.py  session.py
backend/app/models/: db.py  review.py
backend/app/security/: auth.py
backend/app/services/: rate_limit.py  review_service.py
backend/app/services/analysis/: __init__.py  consensus.py  diff_parser.py
backend/app/services/cache/: __init__.py  embeddings.py  semantic_cache.py
backend/app/services/github/: client.py  webhook.py
backend/app/services/llm/: __init__.py  base.py  circuit_breaker.py  claude_client.py  ensemble.py  ollama_client.py  openai_client.py  oss_client.py  prompts.py
backend/app/services/reports/: html_report.py
backend/app/templates/: review_report.html
backend/app/utils/: hashing.py
backend/scripts/: validate_improvements.py
dashboard/: Dockerfile  app.py  requirements.txt
