[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-review-agent"
version = "0.1.0"
description = "Multi-model AI code review platform with semantic caching and GitHub integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AI Code Review Team" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "anthropic>=0.30.0",
  "openai>=1.35.0",
  "langchain-core>=0.2.0",
  "redis[hiredis]>=5.0.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
  "tenacity>=8.4.2",
  "orjson>=3.10.6",
  "itsdangerous>=2.2.0",
  "PyJWT>=2.8.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp>=1.26.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "fakeredis>=2.23.3",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]
dashboard = [
  "streamlit>=1.36.0",
  "pandas>=2.2.2",
  "plotly>=5.22.0",
  "requests>=2.32.3"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.app" = ["templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
